- 27/05/2024
07. scan_short.c: added scan_short function
- 16/07/2024
08. authmethods.c, authmethods.h: Added XOAUTH2 auth methods
- 05/09/2024
09. tls.c: added imap to starttls enumeration
10. case_uppers.c: added case_uppers() function
11. case_upperb.c: added case_upperb() function
- 12/11/2024
12. pathexec_env.c: added pathexec_env_plus() to add env variables from plus
    variable

* Sun Mar 03 2024 15:44:18 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.3-1.1%{?dist}
Release 1.3-1.1 Start 30/11/2023 End 03/02/2024
- 30/11/2023
01. scan_int.c, scan_ulong.c: fix conversion when string has non-numeric
    characters
- 22/12/2023
02. str_spn.c: added str_spn() function
- 31/12/2023
03. moved repository to indimail org
- 22/01/2024
04. added buffer library interface
05. substdio.h, subfdins.c, subfdouts.c, subfderr.c: use SUBSTDIO_SMALL
    definition from substdio.h
- 23/01/2024
06. timeoutread.c, timeoutwrite.c: added version using poll() instead of
    select() - taken from Erwin Hofman's fehQlibs
- 31/01/2024

* Fri Sep 08 2023 12:40:38 +0530 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
- 24/04/2023
01. error.c, error.h: fixed error code numbering
- 19/05/2023
02. libqmail.spec.in: updated SPEC post fedora review
- 10/06/2023
03. tcpopen.c: added missing return for unix domain socket
- 28/06/2023
04. added tcpremoteip() function
- 16/07/2023
05. base/mkpasswd.c: allow storage space for salt to be dynamically allocated
06. base/makesalt.c: added YESCRYPT. use crypt_gensalt if available to
    generate salt for yescrypt
07. configure.ac, base/hashmethods.h.in: added YESCRYPT_HASH
- 06/07/2023
08. renamed ssl directory to tls
09. base/strerr.h: protect STRERR, STRERR_SYS macro parameters
10. tls/tls.c, tls/tls.h: store ssl, system error for tlsread, tlswrite in
    strerr_tls structure
- 22/08/2023
11. tls/tls.c: added get_tls_method function