@@ -22,6 +22,8 @@ Release 1.4-1.1 Start 29/04/2024 End 06/08/2024
 - 12/11/2024
 12. pathexec_env.c: added pathexec_env_plus() to add env variables from plus
     variable
+- 21/12/2024
+12. commands.c, commands.h: added cmd_name() function
 
 * Sun Mar 03 2024 15:44:18 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.3-1.1%{?dist}
 Release 1.3-1.1 Start 30/11/2023 End 03/02/2024
